force-app/main/default/objects/Component__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Name,&quot; &quot;,&quot;_&quot;),&quot;,&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;),&quot;&amp;&quot;,&quot;&quot;),&quot;&apos;&quot;,&quot;&quot;),&quot;__&quot;,&quot;_&quot;)+&quot;__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Name</label>
    <type>Text</type>
</CustomField>