force-app/main/default/objects/Component__c/fields/Associated_Object__c.field-meta.xml
<CustomField>
    <fullName>Associated_Object__c</fullName>
    <label>Associated Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>