force-app/main/default/objects/Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI Live Metric Definition</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Action Link Group Template</fullName>
            </value>
            <value>
                <fullName>Action Plan Template</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Sharing Reason</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Article Type</fullName>
            </value>
            <value>
                <fullName>Asset File</fullName>
            </value>
            <value>
                <fullName>Assistant Recommendation Type</fullName>
            </value>
            <value>
                <fullName>Aura Component Bundle</fullName>
            </value>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Button or Link</fullName>
            </value>
            <value>
                <fullName>CORS Whitelist Origin</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Channel Menu Deployment</fullName>
            </value>
            <value>
                <fullName>Chat Blocking Rule</fullName>
            </value>
            <value>
                <fullName>Chatter Extension</fullName>
            </value>
            <value>
                <fullName>Classic Letterhead</fullName>
            </value>
            <value>
                <fullName>Communication Channel Layout</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>Content Security Policy Trusted Site</fullName>
            </value>
            <value>
                <fullName>Custom Console Component</fullName>
            </value>
            <value>
                <fullName>Custom Data Type</fullName>
            </value>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Custom Help Menu Section</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type</fullName>
            </value>
            <value>
                <fullName>Custom Notification Type</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>